--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,59 @@
 		"VÄART",
 		"Vandelay",
 		"Zanzo"
+	],
+	"[yaml]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2,
+		"editor.autoIndent": "advanced",
+		"diffEditor.ignoreTrimWhitespace": false,
+		"editor.defaultColorDecorators": "never",
+		"editor.quickSuggestions": {
+			"strings": "on"
+		}
+	},
+	"json.schemas": [
+		{
+            "name": "Manual items.json",
+            "description": "items.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/items.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.items.schema.json"
+        },
+        {
+            "name": "Manual game.json",
+            "description": "game.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/game.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.game.schema.json"
+        },
+        {
+            "name": "Manual locations.json",
+            "description": "locations.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/locations.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.locations.schema.json"
+        },
+        {
+            "name": "Manual regions.json",
+            "description": "regions.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/regions.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.regions.schema.json"
+        },
+        {
+            "name": "Manual categories.json",
+            "description": "categories.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/categories.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.categories.schema.json"
+        },
+        {
+            "name": "Manual meta.json",
+            "description": "meta.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/meta.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.meta.schema.json"
+        },
+        {
+            "name": "Manual options.json",
+            "description": "options.json schema file for APWorlds created with Manual",
+            "fileMatch": [ "**/manual*/data/options.json" ],
+            "url": "https://raw.githubusercontent.com/ManualForArchipelago/Manual/main/schemas/Manual.options.schema.json"
+        }
 	]
 }
