--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "js-yaml": "^4.1.1",
+    "lodash": "^4.17.21",
     "semver": "^7.7.3"
   }
 }
